src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Core_Project_Timeframe__c</fullName>
        <description>Timeframe for the project</description>
        <label>Project Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>0-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-24 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;24 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Reason_for_Deletion__c</fullName>
        <description>The reason why an Opportunity is flagged for deletion</description>
        <inlineHelpText>Reason why the Opportunity is flagged for deletion (e.g., it is a duplicate). Include specific reasons and IDs of duplicates if relevant</inlineHelpText>
        <label>Reason for Deletion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Reason_for_Win_Loss__c</fullName>
        <description>Reason why the Opportunity was won, lost, or cancelled</description>
        <label>Reason for Win/Loss/Cancel</label>
        <picklist>
            <picklistValues>
                <fullName>Accessibility - Affordable Financing T&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility - Change in Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility - Inadequate Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility - Lack or Loss of Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility - Strong Business Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration - Fellow Traveler Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration with DemoDepot/Seeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration with EPSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration with IASI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration with iPIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration with IT@Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration with SSD Solution Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration with SSG CRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration with vPro ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecosystem Partners Collaboration/Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Incentive/Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Stimulus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ignite II Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Enabled Software Application Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Executive Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel IT Center Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Relationship/Install Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Event/Reference Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Performance/Features/Roadmap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Price [Intel or Competitor]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTEG: Competitive Analysis/Benchmarking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTEG: Demo and seeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTEG: Solution design/troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSG-DRD ISV AE Support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Core_Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Sales_Units__c</fullName>
        <description>The Sales Units working on an Opportunity</description>
        <label>Sales Units</label>
        <picklist>
            <picklistValues>
                <fullName>3SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Core_Screen_Size__c</fullName>
        <label>Screen Size</label>
        <picklist>
            <picklistValues>
                <fullName>SCREEN SIZE: 23&quot; TO 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 17&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 18&quot; TO 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 21&quot; TO 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 8&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 7.85&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 10.1&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: &gt;= 10.1&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 7&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: &gt;= 10.1&quot;, SCREEN SIZE: 11.6&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 12&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 14&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 15&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 18 TO 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 13&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: &gt;= 17&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 11.6&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 11&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 21 TO 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: &gt;25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 5&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 10&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 6&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 23 TO 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: &gt;= 17&quot;, SCREEN SIZE: 15&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 13.3&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: 14, SCREEN SIZE: 23 TO 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: &lt;= 10&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: &lt; 15&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCREEN SIZE: &gt;= 15&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Solution_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Milestone</label>
        <referenceTo>Solution_Milestones__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <description>Formula field that shows the status of an Opportunity (Open or Closed) based on the stage</description>
        <formula>CASE(StageName,
&quot;Qualifying&quot;, &quot;Open&quot;,
&quot;Defining&quot;, &quot;Open&quot;,
&quot;Developing&quot;, &quot;Open&quot;,
&quot;Design&quot;, &quot;Open&quot;,
&quot;Design Win&quot;, &quot;Closed - Won&quot;,
&quot;Production Win&quot;, &quot;Closed - Won&quot;,
&quot;Lost&quot;, &quot;Closed - Lost&quot;,
&quot;Cancelled&quot;, &quot;Closed - Cancelled&quot;,
&quot;In Production&quot;, &quot;Closed - In Production&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated Status of an Opportunity (Open or Closed) based on the stage</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Technical_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Weighted_Annual_Opportunity_DW_K__c</fullName>
        <description>Calculated field for Weighted Annual Opportunity DW $K</description>
        <label>Weighted Annual Opportunity DW $K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Architecture__c</fullName>
        <label>Current Architecture</label>
        <picklist>
            <picklistValues>
                <fullName>ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPU/GPGPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Xscale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Competing Arch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SuperH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x86</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Consent_for_Marketing_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Consent for Marketing Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Product_Quantity__c</fullName>
        <description>Quantity of the end product that is being sold</description>
        <label>Customer Product Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_not_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_ID__c</fullName>
        <description>The Contact ID from Eloqua when leads are coming from Eloqua</description>
        <label>Eloqua Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>Job Function</description>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Administration/Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications/Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant/Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Quality/Support Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBusiness Manager/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Level Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Management and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Management Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Business Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Design</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <label>Lead Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>if ( ISPICKVAL( LeadSource , &quot;Employee Referral&quot;), 4,
if ( ISPICKVAL( LeadSource , &quot;External Referral&quot;), 6,
if ( ISPICKVAL( LeadSource , &quot;Partner&quot;), 8,
if( ISPICKVAL( LeadSource , &quot;Public Relations&quot;), 10,
if( ISPICKVAL( LeadSource , &quot;Seminar - Internal&quot;), 4,
if( ISPICKVAL( LeadSource , &quot;Seminar - Partner&quot;), 7,
if( ISPICKVAL( LeadSource , &quot;Customer Support&quot;), 7,
if( ISPICKVAL( LeadSource , &quot;Other&quot;), 4,
if( ISPICKVAL( LeadSource , &quot;EDC Website&quot;), 10,
if( ISPICKVAL( LeadSource , &quot;Community&quot;), 7,
if( ISPICKVAL( LeadSource , &quot;Word of Mouth&quot;), 7,
if( ISPICKVAL( LeadSource , &quot;Trade Show&quot;), 6,
if( ISPICKVAL( LeadSource , &quot;Web&quot;), 0, 0)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAG_Account__c</fullName>
        <description>Formula field that pulls the value of the MAG field on the related Account</description>
        <formula>Account.Military_Aerospace_and_Government__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that pulls the value of the MAG field on the related Account</inlineHelpText>
        <label>MAG Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Priority__c</fullName>
        <description>Score from Marketing System</description>
        <label>Marketing Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <picklist>
            <picklistValues>
                <fullName>Kontron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radisys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Bay Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haswell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arbuckle Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avrell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulder Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxboro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Braswell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Intel® Atom™ Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® Core™ Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® EP80579 Integrated Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® Xeon® Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet Controllers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid State Drives (SSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <label>Project Size</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;$10,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000,000 - $5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000,000 - $1,000,0000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;$1,000,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Timeframe__c</fullName>
        <label>Project Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>0-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-24 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;24 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <description>Rejection Comments</description>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Area__c</fullName>
        <label>Solution Area</label>
        <picklist>
            <picklistValues>
                <fullName>Adjacent Tech &amp; Enterprise TAM Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Manageability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Virtualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP / Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPC/MIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresh/Ramp/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RISC/Mission Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software or Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Focus__c</fullName>
        <label>Solution Focus</label>
        <picklist>
            <controllingField>Solution_Area__c</controllingField>
            <picklistValues>
                <fullName>2 in 1s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aepona Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Compute Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Data Analytics and Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Refresh/Ramp/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Comms Cloud – Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Comms Devices – Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Comms Devices – Sell With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Network Infra/DC/Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco PC/Tablet/Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco PC/Tablet – Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco PC/Tablet – Sell With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms SP/Telco Services on IA - Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Manager SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving New Embedded Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressway Services Gateway or Tokenization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Big Data and Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare IT Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Performance Computing - Sell Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel CAS (Cache Accl. SW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Hadoop SW and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel SSDs for Business Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel SSDs for Data Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT: Aggregation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT: Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT: Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT: Sensor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>